✨ Added smart board reorganisation